@@ -6,6 +6,7 @@
 * User agents are stored for hits on affiliate links.
 * Hit stats now show user agents in the Visits & Referrals section.
 * Hit stats now show user agents in the Affiliates & Referrals section.
+* Added hit references for referrals.
 
 = 2.16.7 =
 * Changing the username related to an affiliate if the username doesn't exist shows an error.
